--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
+  },
+  "resolutions": {
+    "babel-jest":"24.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
