--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.12.0",
     "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
@@ -14,7 +15,7 @@
     "react-scripts": "3.4.0"
   },
   "resolutions": {
-    "babel-jest":"24.7.1"
+    "babel-jest": "24.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
