--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crw-cloth",
-  "homepage": "https://ReAliens.github.io/",
+  "homepage": "https://ReAliens.github.io/crown-clothing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
