finishing checkout page with the whole feature

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crw-cloth",
-  "homepage": "https://ReAliens.github.io/crown-clothing",
+  "homepage": "https://ReAliens.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
