--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "styled-components": "^5.1.0"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
