--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "crw-cloth",
-  "homepage": "https://ReAliens.github.io/",
+  "homepage": "https://realiens.github.io/crown-clothing/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.15.5",
+    "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
