--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crw-cloth",
-  "homepage": "https://realiens.github.io/crown-clothing/",
+  "homepage": "https://realiens.github.io/crown-clothing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
